# satgonetem

./: .gitignore  README.md  pyproject.toml  setup.py  test.json  test.py  test_topology.json
docs/: controller.md  custom_project.md  hil_manager.md  link_budget.md  project_creation.md  routing.md  topology_manager_api.md  traffic.md
resources/: ground_stations.txt
resources/gonetem_config/: config.yaml
resources/ground_station_files/: 100_ground_stations.txt  starlink.txt
satgonetem/: __init__.py
satgonetem/dynamics/: README.md  __init__.py  base.py  satcom_model.py
satgonetem/launchers/: README.md  __init__.py  base_launcher.py  direct_launcher.py  gonetem_launcher.py  hil_manager.py
satgonetem/link_budget/: __init__.py  antenna.py  budget.py  config.py  constants.py  conversions.py  geometry.py  modcod.py  modulation.py  propagation.py  receiver.py  service.py  strategies.py  transmitter.py
satgonetem/models/: __init__.py  ground_station.py  interface.py  link.py  mpls_entry.py  node.py  routing_entry.py  sat_com_models.py  satellite.py
satgonetem/proto/: netem_pb2.py  netem_pb2_grpc.py
satgonetem/routing/: __init__.py  base_daemon.py  isis_sr_bird_daemon.py  ospf_daemon.py  p4_daemon.py  srmpls_daemon.py  static_daemon.py
satgonetem/services/: topology_satcom.py
satgonetem/traffic/: __init__.py  flow_scheduler.py  hping3_utils.py  iperf2_utils.py  iperf3_utils.py  ping_utils.py
satgonetem/utils/: __init__.py  cicflowmeter_reader.py  constants.py  coverage.py  custom_connection_strategies.py  flow_scheduler.py  graph_shared_memory.py  ip_utils.py  node_terminal_bridge.py  project_builder.py  satcom_fix.py  test.py  utils.py
tests/: benchmark_link_operations.py
tests/models/: test_interface.py  (+7 more)
tle_files/: oneweb.txt
topology_files/: README.md  iridium_topology.json  iris2_topology.json  kuiper_topology.json  oneweb_topology.json  starlink_topology.json  test_topology.json
(+34 files in other folders)
